fix: fixes spacing issue
The .host-requirements-link css class was being overridden. So the rules didn't apply.

--- a/src/components/fetching/HostRequirements.css
+++ b/src/components/fetching/HostRequirements.css
@@ -1,3 +1,3 @@
-.host-requirements-link {
+.host-requirements-link.host-requirements-link {
   margin-right: var(--pf-global--spacer--sm);
 }
